# goal-bar

./: README.md  package-lock.json  package.json
src/: App.tsx  main.js  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/store/: goals.ts
